# FastEMRIWaveforms

./: .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: documentation-links.yml  publish.yml  sonarqube.yml  tests.matrix.private.json  tests.matrix.public.json
cmake/: FEW.cmake
dataset-preprocessing/KerrEccEq/: amplitude-data-preparation.py  flux-data-preparation.py
docs/source/: conf.py
docs/source/dev/: ide.md
docs/source/user/: cfg.md  main.rst
examples/: Amplitude_tutorial.ipynb  FastEMRIWaveforms_tutorial.ipynb  Quickstart_guide.ipynb  Trajectory_tutorial.ipynb  Tutorial_FD_construction_single_mode.ipynb  cubicspline.ipynb  example_ode_base_pn5_add_phys.cc  example_pn5_add_phys_waveform.py  modeselect.ipynb  modesummation.ipynb  utility.ipynb  waveform.ipynb
src/: CMakeLists.txt
src/compiled/: CMakeLists.txt
src/fastemriwaveforms/summation/: aakwave.py  fdinterp.py  interpolatedmodesum.py
src/fastemriwaveforms/trajectory/: inspiral.py  integrate.py
src/fastemriwaveforms/trajectory/ode/: pn5.py
src/fastemriwaveforms/utils/: baseclasses.py  elliptic.py  modeselector.py  pn_map.py
src/fastemriwaveforms/waveform/: waveform.py
src/few/: __init__.py  _version.py
src/few/amplitude/: __init__.py  ampinterp2d.py  base.py  romannet.py
src/few/cutils/: AmpInterp2D.cu  AmpInterp2D.hh  __init__.py  cuda_complex.hpp  global.h  gpuAAK.cu  gpuAAK.hh  interpolate.cu  interpolate.hh  matmul.cu  matmul.hh  pyAmpInterp2D.py  pyAmpInterp2D_cpu.py  pycpuAAK.py  pygpuAAK.py  pyinterp.py  pyinterp_cpu.py  pymatmul.py  pymatmul_cpu.py
src/few/files/: manager.py  registry.py  registry.schema.json
src/few/summation/: aakwave.py  directmodesum.py  fdinterp.py  interpolatedmodesum.py
src/few/trajectory/: base.py  dopr853.py  inspiral.py  integrate.py  protocol.py
src/few/trajectory/ode/: __init__.py  base.py  flux.py
src/few/utils/: auto_array.py  baseclasses.py  citations.py  config.py  exceptions.py  fdutils.py  geodesic.py  globals.py  modeselector.py  parallel_base.py  typing.py  utility.py  ylm.py
src/few/utils/mappings/: pn.py  schwarzecc.py
src/few/waveform/: base.py  waveform.py
tests/: __main__.py  base.py  test_amplitudes.py  test_mappings.py  test_mode_selector.py  test_mode_summation.py  test_traj.py  test_utility.py
tests/test_utils/: test_typing.py
